# PFC-Notes

./: Cargo.toml  README.md
contracts/pfc-notes-contract/: Cargo.toml
contracts/pfc-notes-contract/examples/: schema.rs
contracts/pfc-notes-contract/src/: error.rs  execute.rs  lib.rs  query.rs  state.rs
contracts/pfc-notes-contract/src/testing/: tests.rs
notes/: install_pisco.txt  instantiate_pisco.json
