[workspace]
members = ["contracts/*", "packages/*"]

[workspace.package]
version       = "0.1.0"
authors       = ["PFC <pfc-validator@protonmail.com>"]
edition       = "2021"
rust-version  = "1.65.0"
license       = "Apache-2.0"
homepage      = "https://PFC.zone"
repository    = "https://github.com/PFC-Validator/PFC-Notes"
documentation = "https://github.com/PFC-Validator/PFC-Notes#readme"
keywords      = ["blockchain", "cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-schema = "1.2"
cosmwasm-std    = "1.2"
cw2             = "1.0"
cw-ownable      = "0.5"
thiserror       = "1"
cw-storage-plus = {version="1.0"}


[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
